# KineLearn

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: drosophila.yaml  drosophila_example.yaml  example.yaml  example_config.yaml
data_splits/legacy/: oct2025_train_test_split.txt  oct2025_train_val_split_rep00_seed597.txt
scripts/: calculate_features.py
src/KineLearn/: __init__.py
src/KineLearn/core/: behavior.py  features.py  generators.py  geometry.py  keypoints.py  losses.py  manifests.py  memmap.py  models.py  path.py
src/KineLearn/scripts/: archive_results.py  batch_eval_splits.py  calculate_features.py  create_ensemble.py  eval.py  plot_timeline.py  predict.py  restore_run_artifacts.py  select_ensemble.py  split_dataset.py  split_variability.py  train.py
tests/: test_archive_results.py  test_ensemble.py  test_plot_timeline.py  test_predict.py  test_restore_run_artifacts.py  test_select_ensemble.py  test_split_variability_resume.py  test_splits.py
video_lists/: example.yaml  example_video_list.yaml
