[project]
name = "KineLearn"
version = "0.1.0"
description = "Feature extraction and behavior analysis from DeepLabCut outputs"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
kinelearn-calc = "KineLearn.scripts.calculate_features:main"
kinelearn-split = "KineLearn.scripts.split_dataset:main"
kinelearn-train = "KineLearn.scripts.train:main"
